[tool.poetry]
name = "repl_python3_RedditBot"
version = "0.1.0"
description = ""
authors = ["SetoKibah <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.3.0"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
